tests/tensorboard/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_tensorboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tensorboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tensorboard/tensorboard/
    rewrite:
      uri: /
    route:
    - destination:
        host: tensorboard.kubeflow.svc.cluster.local
        port:
          number: 9000
